testpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-bridge-deploymentx
  labels:
    app: network-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-bridge
  template:
    metadata:
      labels:
        app: network-bridge
    spec:
      containers:
        - name: bridge-container
          image: ubuntu
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
          securityContext:
            privileged: true
      hostNetwork: true
      restartPolicy: Always
